learned how to connect folders

--- a/links-and-images/images.html
+++ b/links-and-images/images.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Images</h1>
-    <p>This example is about links and <a href='images.html'>images</a>.</p>
+    <p>this is the entrance to our <a href ='misc/extras.html'>extras page</a>, and our <a href='links.html'>links page </a></p>
   </body>
 </html>
