--- a/links-and-images/images.html
+++ b/links-and-images/images.html
@@ -5,6 +5,28 @@
   </head>
   <body>
     <h1>Images</h1>
-    <p>this is the entrance to our <a href ='misc/extras.html'>extras page</a>, and our <a href='links.html'>links page </a></p>
+  <p>This page covers common image formats, but you may also be looking for <a
+   href='links.html'>links</a> and <a href='misc/extras.html'>useful
+   extras</a>.</p>
+   <h2>JPGs</h2>
+
+<p>JPG images are good for photos.</p>
+
+<img src='images/images/mochi.jpg'/> <img src='images/images/mochi.jpg' width='75'alt='A mochi ball in a bubble'/>
+<h2>GIFs</h2>
+
+<p>GIFs are good for animations.</p>
+
+<img src='images/images/mochi.gif'/><img src='images/images/mochi.gif' width='75'alt='A dancing mochi ball'/>
+<h2>PNGs</h2>
+
+<p>PNGs are good for diagrams and icons.</p>
+
+<img src='images/images/mochi.png'/><img src='images/images/mochi.png' width='75'alt='A mochi ball'/>
+<h2>SVGs</h2>
+
+<p>SVGs are <em>amazing</em>. Use them wherever you can.</p>
+
+<img src='images/images/mochi.svg'/><img src='images/images/mochi.svg' width='75'alt='A mochi ball with Bézier handles'/>
   </body>
 </html>
